fix: Fix layout styles. Reset input field on refresh.
- removed width:100% for header to prevent scrollbars
- clear value for filter input field on page load, to reset in Firefox
- set overflow: hidden on filter menu to keep children inside rounded corners

--- a/src/css/large.css
+++ b/src/css/large.css
@@ -32,7 +32,6 @@ body {
   justify-content: center;
   padding: 10px;
   position: relative;
-  width: 100%;
 }
 
 .header__h1 {
@@ -86,6 +85,7 @@ body {
   display: flex;
   -webkit-flex-direction: column; /* Safari 8 */
   flex-direction: column;
+  overflow: hidden;
 }
 
 .filter-menu__header {
