--- a/src/css/small.css
+++ b/src/css/small.css
@@ -33,7 +33,6 @@ body {
   -webkit-justify-content: center; /* Safari 8 */
   justify-content: center;
   position: relative;
-  width: 100%;
 }
 
 .header__h1 {
